--- a/front/product/index.htm
+++ b/front/product/index.htm
@@ -11,16 +11,32 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-        <script src="https://unpkg.com/vue/dist/vue.js" async defer></script>
-        <script src="https://unpkg.com/element-ui/lib/index.js" async defer></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/0.7.10/vue-router.min.js"></script> -->
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <img  src="http://192.168.23.130:8002/egret_icon.png"/>
+        <div id="app">
+            {{src}}
+        </div>
+        
     </body>
+
+    <script type="text/javascript">
+        new Vue({
+            el: '#app',
+            data: {
+                src: 'http://192.168.23.130:8002/image/egret_icon.png'
+            }
+        });
+        axios.get("localhost:80/login").then(res=>{
+            alert(res);
+        })
+    </script>
 </html>
 
 
