--- a/front/product/index.htm
+++ b/front/product/index.htm
@@ -14,20 +14,27 @@
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/element-ui/lib/index.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="https://ditu.google.com/maps/api/js?key=AIzaSyDOQoYiAiL-EvDI8fCPLFFMSeqqSwyn1gM"></script>
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/0.7.10/vue-router.min.js"></script> -->
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div id="app">
-            {{src}}
-        </div>
+        <div id="googleMap" style="width:500px;height:380px;"></div>
     </body>
 
     <script type="text/javascript">
-        var a = new axios();
-        console.log(a);
+    function initialize()
+    {
+        var mapProp = {
+            center:new google.maps.LatLng(51.508742,-0.120850),
+            zoom:5,
+            mapTypeId:google.maps.MapTypeId.ROADMAP
+        };
+        var map=new google.maps.Map(document.getElementById("googleMap"), mapProp);
+    }
+    google.maps.event.addDomListener(window, 'load', initialize);
     </script>
 </html>
 
